TAG: mgidbmigration-4-4-1-41
TAG: mgidbmigration-4-4-1-40
TAG: mgidbmigration-4-4-1-39
TAG: mgidbmigration-4-4-1-38
DATE: 08/02/2011
STAFF: lec
CHANGES: postgres directory/index changes

TAG: mgidbmigration-4-4-1-37
TAG: mgidbmigration-4-4-1-36
TAG: mgidbmigration-4-4-1-35
TAG: mgidbmigration-4-4-1-34
DATE: 06/23/2011, 07/07/2011
STAFF: lec
CHANGES: TR10044

TAG: mgidbmigration-4-4-1-33
TAG: mgidbmigration-4-4-1-32
TAG: mgidbmigration-4-4-1-31
TAG: mgidbmigration-4-4-1-30
TAG: mgidbmigration-4-4-1-29
TAG: mgidbmigration-4-4-1-28
DATE: 03/07/2011
STAFF: lec
CHANGES: TR10584/perms3.csh

TAG: mgidbmigration-4-4-1-27
TAG: mgidbmigration-4-4-1-26
TAG: mgidbmigration-4-4-1-25
TAG: mgidbmigration-4-4-1-24
TAG: mgidbmigration-4-4-1-23
TAG: mgidbmigration-4-4-1-22
TAG: mgidbmigration-4-4-1-12
DATE: 02/15/2011, 02/28/2011
STAFF: lec
CHANGES: TR10584/strain permissions

TAG: mgidbmigration-4-4-1-11
TAG: mgidbmigration-4-4-1-10
TAG: mgidbmigration-4-4-1-9
DATE: 01/17/2011
STAFF: lec
CHANGES: TR10273/Europhenome

TAG: mgidbmigration-4-4-1-8
TAG: mgidbmigration-4-4-1-7
DATE: 12/15/2010, 12/29/2010
STAFF: lec
CHANGES: TR10457/accession ids for GXD_Structure

TAG: mgidbmigration-4-4-1-6
DATE: 12/10/2010
STAFF: sc
CHANGES: added TR10273 genotypeannotload

TAG: mgidbmigration-4-4-1-5
TAG: mgidbmigration-4-4-1-4
TAG: mgidbmigration-4-4-1-3
TAG: mgidbmigration-4-4-1-2
TAG: mgidbmigration-4-4-1-1
DATE: 12/02/2010
DATE: 11/24/2010
STAFF: lec
CHANGES: TR10044/go notes
	 TR10033/image class

TAG: mgidbmigration-4-4-0-2
DATE: 08/31/2010
STAFF: sc
CHANGES: TR6839 - added alllabel.csh

TAG: mgidbmigration-4-4-0-1
DATE: 08/12/2010
STAFF: sc
CHANGES: TR6839 - removed copyfiles.csh

TAG: mgidbmigration-4-3-4-13
DATE: 07/15/2010
STAFF: lec
CHANGES:  TR9316/genetic map

TAG: mgidbmigration-4-3-4-12
DATE: 07/14/2010
STAFF: sc
CHANGES: TR6839 - added copyfiles.csH

TAG: mgidbmigration-4-3-4-11
DATE: 07/14/2010
STAFF: lec
CHANGES:  TR6839 Marker Types

TAG: mgidbmigration-4-3-4-10
DATE: 07/08/2010