@@ -27,13 +27,14 @@ cp ${MGD_DBSCHEMADIR}/view/${findObject} .
 # convert each mgd-format view script to a postgres script
 #
 
+#g/create view /s//create view mgd./g
+
 for i in ${findObject}
 do
 
 ed $i <<END
 g/csh -f -x/s//sh/g
 g/& source/s//./g
-g/create view /s//create view mgd./g
 g/^go/s///g
 g/active = 1/s//active = true/g
 g/private = 1/s//private = true/g
