@@ -12,8 +12,11 @@ fi
 #
 # copy mgddbschema/index/*_drop.object to postgres directory
 #
+
 cd ${POSTGRESINDEX}
 cp ${MGD_DBSCHEMADIR}/index/${findObject} .
+
+#g/drop index /s//drop index mgd./g
 
 for i in ${findObject}
 do
@@ -23,7 +26,6 @@ t=`basename $i _drop.object`
 ed $i <<END
 g/csh -f -x/s//sh/g
 g/& source/s//./g
-g/drop index /s//drop index mgd./g
 g/${t}.idx/s//$t/g
 g/offset/s//cmOffset/g
 g/^go/s//\\;/g
