@@ -1,3 +1,8 @@
+TAG: mgidbmigration-4-4-1-42
+DATE: 08/31/2011
+STAFF: lec
+CHANGES: postgres directory/non-schema version
+
 TAG: mgidbmigration-4-4-1-41
 TAG: mgidbmigration-4-4-1-40
 TAG: mgidbmigration-4-4-1-39
